# tld

./: .gitignore  CMakeLists.txt  Readme.org  val_build.sh
.github/workflows/: cmake.yml
cmake/: FindClangTools.cmake
src/: CMakeLists.txt  gentables.c  helper.c  tld.c  tld.h
src/alloc/: tld-alloc.c  tld-alloc.h
src/core/: tld-core.c  tld-core.h
src/data/: bitfield.c  bitfield.h
src/hash/: hash.c  hash.h  hash_struct.h
src/hdf5/: testing.c  testing.h  tld-hdf5.c  tld-hdf5.h  tld-hdf5_struct.h  tld-hdf5_tree.c  tld-hdf5_tree.h  tld-hdf5_types.c  tld-hdf5_types.h  tld-hdf5_utils.c  tld-hdf5_utils.h  tld-hdf5wrap.c  tld-hdf5wrap.h
src/json/: tld-json.c  tld-json.h  tld-json_mem.c  tld-json_mem.h  tld-json_misc.c  tld-json_misc.h  tld-json_struct.h
src/kdtree/: tld-kdtree.c  tld-kdtree.h
src/logsum/: tld-logsum.c  tld-logsum.h
src/misc/: misc.c  misc.h
src/rng/: tld-rng.c  tld-rng.h
src/seq/: tld-detect.c  tld-revcomp.c  tld-seq.h  tld-seqalphabet.c  tld-seqbuffer.c  tld-seqio.c
src/shuffle/: tld-shuffle.c  tld-shuffle.h
src/sort/: tld-sort.c  tld-sort.h
src/stats/: auc.c  auc.h  basic.c  basic.h  kde.c  norm_quantile.c  norm_quantile.h
src/string/: str.c  str.h
src/template/: template.c  template.h
src/timing/: tld-timing.c  tld-timing.h
src/tpool/: tpool.c  tpool.h  tpool_internal.c  tpool_internal.h  tpool_sig.c  tpool_sig.h
tests/: CMakeLists.txt  tpool.c  tpool.h  tpool_internal.c  tpool_internal.h  tpool_sig.c  tpool_sig.h  tpool_test.c
tests/itests/: kde_itest.c  noise.c  seq_shannon.c
tests/test_data/: NNNN.fa  broken_fasta1.fa  broken_fasta2.fa  nano.fastq  test.fa
tests/utests/: unit_alphabet.c  unit_auc.c  unit_bitfield.c  unit_core.c  unit_hash.c  unit_hdf5.c  unit_json.c  unit_kdtree.c  unit_logsum.c  unit_misc.c  unit_pearson.c  unit_qnorm.c  unit_rng.c  unit_seq.c  unit_seq_rev.c  unit_shuffle.c  unit_sigmoid.c  unit_sort.c  unit_stats.c  unit_str.c  unit_template.c  unit_tests.c  unit_timing.c  unit_tpool.c
